# surfaces/worktracker-sdk/worktracker_sdk/generated/models/__init__.py
@@ -23,6 +23,7 @@ from worktracker_sdk.generated.models.agent_status_response import AgentStatusRe
 from worktracker_sdk.generated.models.agent_status_scope_response import AgentStatusScopeResponse
 from worktracker_sdk.generated.models.attachment import Attachment
 from worktracker_sdk.generated.models.automation_attempt import AutomationAttempt
+from worktracker_sdk.generated.models.committed_state import CommittedState
 from worktracker_sdk.generated.models.config import Config
 from worktracker_sdk.generated.models.configuration_reorder import ConfigurationReorder
 from worktracker_sdk.generated.models.create_terminal import CreateTerminal
@@ -76,6 +77,9 @@ from worktracker_sdk.generated.models.release_result import ReleaseResult
 from worktracker_sdk.generated.models.replaced_viewer import ReplacedViewer
 from worktracker_sdk.generated.models.resumable_terminal import ResumableTerminal
 from worktracker_sdk.generated.models.resume_result import ResumeResult
+from worktracker_sdk.generated.models.run_now_refusal import RunNowRefusal
+from worktracker_sdk.generated.models.run_now_request import RunNowRequest
+from worktracker_sdk.generated.models.run_now_response import RunNowResponse
 from worktracker_sdk.generated.models.save_document import SaveDocument
 from worktracker_sdk.generated.models.scope_enum import ScopeEnum
 from worktracker_sdk.generated.models.self_terminate_result import SelfTerminateResult
